# backend/api/gmail-api.go
@@ -7,6 +7,7 @@ import (
 
 	"area/controller"
 	"area/middlewares"
+	"area/schemas"
 )
 
 type GmailAPI struct {
@@ -31,16 +32,16 @@ func NewGmailAPI(controller controller.GmailController, apiRoutes *gin.RouterGro
 // @Tags Gmail
 // @Accept json
 // @Produce json
-// @Success 200 {string} schemas.Response
-// @Failure 500 {object} schemas.Response
+// @Success 200 {object} schemas.AuthenticationUrl
+// @Failure 500 {object} schemas.ErrorRespose
 // @Router /gmail/auth [get]
 func (api *GmailAPI) RedirectToService(apiRoutes *gin.RouterGroup) {
 	apiRoutes.GET("/auth", func(ctx *gin.Context) {
 		authURL, err := api.controller.RedirectToService(ctx, apiRoutes.BasePath()+"/auth/callback")
 		if err != nil {
-			ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+			ctx.JSON(http.StatusInternalServerError, schemas.ErrorRespose{Error: err.Error()})
 		} else {
-			ctx.JSON(http.StatusOK, gin.H{"authentication_url": authURL})
+			ctx.JSON(http.StatusOK, schemas.AuthenticationUrl{Url: authURL})
 		}
 	})
 }
@@ -51,7 +52,7 @@ func (api *GmailAPI) RedirectToService(apiRoutes *gin.RouterGroup) {
 // @Tags Gmail
 // @Accept json
 // @Produce json
-// @Success 200 {object} schemas.Response
+// @Success 200 {object} schemas.JWT
 // @Failure 500 {object} schemas.ErrorRespose
 // @Router /gmail/auth/callback [get]
 func (api *GmailAPI) HandleServiceCallback(apiRoutes *gin.RouterGroup) {
@@ -61,9 +62,9 @@ func (api *GmailAPI) HandleServiceCallback(apiRoutes *gin.RouterGroup) {
 			apiRoutes.BasePath()+"/auth/callback",
 		)
 		if err != nil {
-			ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+			ctx.JSON(http.StatusInternalServerError, &schemas.ErrorRespose{Error: err.Error()})
 		} else {
-			ctx.JSON(http.StatusOK, gin.H{"access_token": gmail_token})
+			ctx.JSON(http.StatusOK, &schemas.JWT{Token: gmail_token})
 		}
 	})
 }
@@ -81,7 +82,7 @@ func (api *GmailAPI) GetUserInfo(apiRoutes *gin.RouterGroup) {
 	apiRoutes.GET("/user", func(ctx *gin.Context) {
 		userInfo, err := api.controller.GetUserInfo(ctx)
 		if err != nil {
-			ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+			ctx.JSON(http.StatusInternalServerError, &schemas.ErrorRespose{Error: err.Error()})
 		} else {
 			ctx.JSON(http.StatusOK, gin.H{"user_info": gin.H{"login": userInfo.Login, "email": userInfo.Email}})
 		}
