# backend/schemas/credentials-schemas.go
@@ -11,11 +11,15 @@ type RegisterCredentials struct {
 	Password string `form:"password" json:"password"`
 }
 
+type AuthenticationUrl struct {
+	Url string `json:"authentication_url"`
+}
+
 type JWT struct {
 	Token string `json:"token"`
 }
 
 type CodeCredentials struct {
-	Code string `form:"code"  json:"code"`
+	Code string `form:"code" json:"code"`
 	// State string `form:"state" json:"state"`
 }
